# zkstats-verifier-api

./: README.md  main.py  pyproject.toml
lib/: __init__.py
tests/: test_api.py  test_lib.py
tests/assets/: data_commitment.json  model.pf  precal_witness.json  settings.json
